Bug 1047233 - B2G NFC: handler the errorMsg in NfcService and list errorMsg in WebIDL. r=smaug, allstars.chh