dom/webidl/NfcOptions.webidl
@@ -22,6 +22,7 @@ dictionary NfcEventOptions
   DOMString type = "";
 
   long status;
+  NfcErrorMessage errorMsg;
   long sessionId;
   DOMString requestId;
 
